* Converted evaluation's sorter items to use <Button> component and added <Dropdown> component to display necessary tooltip instead of use of title attribute * Adjusted relative components paths * Removed height 100% from empty.scss as it caused layout issues

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/buttons.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/buttons.scss
@@ -626,7 +626,6 @@
   &:hover,
   &.hover {
     background-color: darken($color-button-pill-background, 10%);
-
   }
 
   &:active,
@@ -1227,6 +1226,37 @@
 
 .button--muikku-update-assignment {
   background: $color-assignment;
+}
+
+// Evaluation related
+.button-pill--sorter {
+  background: lighten($color-default-helper, 20%);
+  border-radius: 3px;
+  box-sizing: unset;
+  color: black;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "muikku";
+  font-size: 1.125rem;
+  height: 1.125rem;
+  line-height: 1.125rem;
+  margin: 0 10px 0 0;
+  padding: 6px;
+  width: 1.125rem;
+
+  &:hover {
+    background: $color-info;
+    color: $color-default;
+  }
+
+  &:last-child {
+    margin: 0;
+  }
+}
+
+.button-pill--sorter-selected {
+  background: $color-info;
+  color: $color-default;
 }
 
 // Material master management related
