--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/empty.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/empty.scss
@@ -6,9 +6,7 @@
 .empty {
   align-items: center;
   display: flex;
-  height: 100%;
   justify-content: center;
-  min-height: calc(100vh - 155px);
   padding: 20px;
   width: 100%;
 
@@ -16,10 +14,6 @@
     font-family: $text-font-family;
     font-size: 1.2rem;
     font-weight: 300;
-  }
-
-  @include breakpoint($breakpoint-pad) {
-    min-height: 100%;
   }
 }
 
